objects/SBQQ__SearchIndex__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Localization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localization</label>
        <referenceTo>SBQQ__Localization__c</referenceTo>
        <relationshipLabel>Search Index</relationshipLabel>
        <relationshipName>Search_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <label>Value</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Search Index</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>